Implementing GO and Component
Still need to do some tweaks

--- a/CoolShooterGuy.vcxproj
+++ b/CoolShooterGuy.vcxproj
@@ -133,11 +133,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\GameObject\PlayerTest.cpp" />
+    <ClCompile Include="Source\Components\Component.cpp" />
+    <ClCompile Include="Source\GameObject\GameObject.cpp" />
     <ClCompile Include="Source\Game\Game.cpp" />
     <ClCompile Include="Source\main.cpp" />
+    <ClCompile Include="Source\Components\Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\GameObject\PlayerTest.h" />
+    <ClInclude Include="Source\Components\Component.h" />
+    <ClInclude Include="Source\GameObject\GameObject.h" />
     <ClInclude Include="Source\Game\Game.h" />
+    <ClInclude Include="Source\Components\Transform.h" />
+    <ClInclude Include="Source\MemoryLeakDetector\MemoryLeakDetector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
