--- a/CoolShooterGuy.vcxproj
+++ b/CoolShooterGuy.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="Source\Game\Game.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Components\Transform.cpp" />
+    <ClCompile Include="Vector2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\GameObject\PlayerTest.h" />
@@ -147,6 +148,7 @@
     <ClInclude Include="Source\Game\Game.h" />
     <ClInclude Include="Source\Components\Transform.h" />
     <ClInclude Include="Source\MemoryLeakDetector\MemoryLeakDetector.h" />
+    <ClInclude Include="Vector2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
