Input Handler Review
1. Moved Mouse struct into it's own .h so input handler isn't as full.
2. Converted Sint32 to SDL_Keycode (works)
3. Made one liner methods inline and defined them in .h to make input handler .cpp more readable
4. Made public stuff be at the top of .h and private below it (People will want to look at what they can use first)
5. Initialised mouse states in Initialise function
6. Added GetKey and GetMouse function calls to HandleInput to parse through currently bound actions and execute them if the buttonstate matches up with the current state of the button.

--- a/CoolShooterGuy.vcxproj
+++ b/CoolShooterGuy.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="Source\GameObject\GameObject.h" />
     <ClInclude Include="Source\Game\Game.h" />
     <ClInclude Include="Source\Components\Transform.h" />
+    <ClInclude Include="Source\Input\Mouse.h" />
     <ClInclude Include="Source\MemoryLeakDetector\MemoryLeakDetector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
