Time Class Integration + Review
1. Changed name of class to Time to conform to unity standards.
2. Added namespace to .cpp to make it easier to type std::chrono stuff
3. Added public above private in .h
4. No need to define constructor/destructor since it's a container class that only holds statics (Doesn't need to be instantiated)
5. Made previousTime be set at the end of tick to prevent incorrect deltatime value during first loop.
6. Added elapsedTime to tick so it can be updated with deltaTime value.
7. Inlined one liner methods.
8. Made sure deltaTime getter takes into account timeScale.

--- a/CoolShooterGuy.vcxproj
+++ b/CoolShooterGuy.vcxproj
@@ -142,7 +142,7 @@
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Components\Transform.cpp" />
     <ClCompile Include="Source\Vector2\Vector2.cpp" />
-    <ClCompile Include="Source\Time\TimeClass.cpp" />
+    <ClCompile Include="Source\Time\Time.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Maths\Maths.h" />
@@ -155,7 +155,7 @@
     <ClInclude Include="Source\Input\Mouse.h" />
     <ClInclude Include="Source\MemoryLeakDetector\MemoryLeakDetector.h" />
     <ClInclude Include="Source\Vector2\Vector2.h" />
-    <ClInclude Include="Source\Time\TimeClass.h" />
+    <ClInclude Include="Source\Time\Time.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
