Currently implementing Collider Class
Will likely need to be fully converted to weak_ptr instead of raw pointer.

--- a/CoolShooterGuy.vcxproj
+++ b/CoolShooterGuy.vcxproj
@@ -133,9 +133,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Collision\Collider.cpp" />
     <ClCompile Include="Source\Maths\Maths.cpp" />
     <ClCompile Include="Source\Input\InputHandler.cpp" />
-    <ClCompile Include="Source\GameObject\PlayerTest.cpp" />
     <ClCompile Include="Source\Components\Component.cpp" />
     <ClCompile Include="Source\GameObject\GameObject.cpp" />
     <ClCompile Include="Source\Game\Game.cpp" />
@@ -145,9 +145,9 @@
     <ClCompile Include="Source\Time\Time.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Collision\Collider.h" />
     <ClInclude Include="Source\Maths\Maths.h" />
     <ClInclude Include="Source\Input\InputHandler.h" />
-    <ClInclude Include="Source\GameObject\PlayerTest.h" />
     <ClInclude Include="Source\Components\Component.h" />
     <ClInclude Include="Source\GameObject\GameObject.h" />
     <ClInclude Include="Source\Game\Game.h" />
