Debug + Color Class Review
1. Moved Debug Class to Debug Folder
2. Moved Color struct to it's own .h in a Color folder
3. Used forward declaration of SDL_Renderer in .h file and included SDL to use Renderer in .cpp
4. Made random color function static
5. Set default initialization for RGBA values to 255 to act like default constructor as well as custom one.
6. Made public functions first and private members after in debug .h
7. Added logic to save previous render colour and restore it to that colour once a line is drawn.
8. Implemented yellow color output for LogWarning and red color for log error functions.
9. Made one-liner methods inline in .h
10. Implemented logic for both DrawColliderOutline (Box and Circle), commented out since colliders aren't implemented yet.

--- a/CoolShooterGuy.vcxproj
+++ b/CoolShooterGuy.vcxproj
@@ -133,7 +133,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source\DebugSystem\Debug.cpp" />
+    <ClCompile Include="Source\Debug\Debug.cpp" />
     <ClCompile Include="Source\Collision\Collider.cpp" />
     <ClCompile Include="Source\Maths\Maths.cpp" />
     <ClCompile Include="Source\Input\InputHandler.cpp" />
@@ -146,7 +146,8 @@
     <ClCompile Include="Source\Time\Time.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\DebugSystem\Debug.h" />
+    <ClInclude Include="Source\Color\Color.h" />
+    <ClInclude Include="Source\Debug\Debug.h" />
     <ClInclude Include="Source\Collision\Collider.h" />
     <ClInclude Include="Source\Maths\Maths.h" />
     <ClInclude Include="Source\Input\InputHandler.h" />
@@ -155,7 +156,7 @@
     <ClInclude Include="Source\Game\Game.h" />
     <ClInclude Include="Source\Components\Transform.h" />
     <ClInclude Include="Source\Input\Mouse.h" />
-    <ClInclude Include="Source\MemoryLeakDetector\MemoryLeakDetector.h" />
+    <ClInclude Include="Source\Debug\MemoryLeakDetector.h" />
     <ClInclude Include="Source\Vector2\Vector2.h" />
     <ClInclude Include="Source\Time\Time.h" />
   </ItemGroup>
