--- a/CoolShooterGuy.vcxproj.filters
+++ b/CoolShooterGuy.vcxproj.filters
@@ -11,7 +11,7 @@
     <ClCompile Include="Source\Maths\Maths.cpp" />
     <ClCompile Include="Source\Time\Time.cpp" />
     <ClCompile Include="Source\Collision\Collider.cpp" />
-    <ClCompile Include="Source\DebugSystem\Debug.cpp" />
+    <ClCompile Include="Source\Debug\Debug.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Input\InputHandler.h" />
@@ -20,11 +20,12 @@
     <ClInclude Include="Source\Game\Game.h" />
     <ClInclude Include="Source\Components\Transform.h" />
     <ClInclude Include="Source\Input\Mouse.h" />
-    <ClInclude Include="Source\MemoryLeakDetector\MemoryLeakDetector.h" />
+    <ClInclude Include="Source\Debug\MemoryLeakDetector.h" />
     <ClInclude Include="Source\Vector2\Vector2.h" />
     <ClInclude Include="Source\Maths\Maths.h" />
     <ClInclude Include="Source\Time\Time.h" />
     <ClInclude Include="Source\Collision\Collider.h" />
-    <ClInclude Include="Source\DebugSystem\Debug.h" />
+    <ClInclude Include="Source\Debug\Debug.h" />
+    <ClInclude Include="Source\Color\Color.h" />
   </ItemGroup>
 </Project>
