--- a/CoolShooterGuy.vcxproj.filters
+++ b/CoolShooterGuy.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClCompile Include="Source\Debugging\Debug.cpp" />
     <ClCompile Include="Source\Collision\BoxCollider.cpp" />
     <ClCompile Include="Source\Collision\CircleCollider.cpp" />
+    <ClCompile Include="Source\Physics\Rigidbody.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Input\InputHandler.h" />
@@ -31,5 +32,6 @@
     <ClInclude Include="Source\Color\Color.h" />
     <ClInclude Include="Source\Collision\BoxCollider.h" />
     <ClInclude Include="Source\Collision\CircleCollider.h" />
+    <ClInclude Include="Source\Physics\Rigidbody.h" />
   </ItemGroup>
 </Project>
