--- a/CoolShooterGuy.vcxproj.filters
+++ b/CoolShooterGuy.vcxproj.filters
@@ -18,6 +18,7 @@
     <ClCompile Include="Source\AssetLoading\Asset.cpp" />
     <ClCompile Include="Source\AssetLoading\AssetHandler.cpp" />
     <ClCompile Include="Source\Color\Color.cpp" />
+    <ClCompile Include="Source\Camera\Camera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Input\InputHandler.h" />
@@ -38,5 +39,6 @@
     <ClInclude Include="Source\Physics\Rigidbody.h" />
     <ClInclude Include="Source\AssetLoading\Asset.h" />
     <ClInclude Include="Source\AssetLoading\AssetHandler.h" />
+    <ClInclude Include="Source\Camera\Camera.h" />
   </ItemGroup>
 </Project>
