--- a/CoolShooterGuy.vcxproj.filters
+++ b/CoolShooterGuy.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Source\AssetLoading\Asset.cpp" />
     <ClCompile Include="Source\AssetLoading\AssetHandler.cpp" />
     <ClCompile Include="Source\Color\Color.cpp" />
-    <ClCompile Include="Source\Particles\Particles.cpp" />
+    <ClCompile Include="Source\Particles\Particle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Input\InputHandler.h" />
@@ -39,6 +39,6 @@
     <ClInclude Include="Source\Physics\Rigidbody.h" />
     <ClInclude Include="Source\AssetLoading\Asset.h" />
     <ClInclude Include="Source\AssetLoading\AssetHandler.h" />
-    <ClInclude Include="Source\Particles\Particles.h" />
+    <ClInclude Include="Source\Particles\Particle.h" />
   </ItemGroup>
 </Project>
