--- a/CoolShooterGuy.vcxproj.filters
+++ b/CoolShooterGuy.vcxproj.filters
@@ -19,6 +19,8 @@
     <ClCompile Include="Source\AssetLoading\AssetHandler.cpp" />
     <ClCompile Include="Source\Color\Color.cpp" />
     <ClCompile Include="Source\Particles\Particle.cpp" />
+    <ClCompile Include="Source\Map\Map.cpp" />
+    <ClCompile Include="Source\Layers\TileLayer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Input\InputHandler.h" />
@@ -40,5 +42,8 @@
     <ClInclude Include="Source\AssetLoading\Asset.h" />
     <ClInclude Include="Source\AssetLoading\AssetHandler.h" />
     <ClInclude Include="Source\Particles\Particle.h" />
+    <ClInclude Include="Source\Layers\Layer.h" />
+    <ClInclude Include="Source\Map\Map.h" />
+    <ClInclude Include="Source\Layers\TileLayer.h" />
   </ItemGroup>
 </Project>
