updating camera as per feedback

--- a/CoolShooterGuy.vcxproj
+++ b/CoolShooterGuy.vcxproj
@@ -133,6 +133,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Camera\Camera.cpp" />
     <ClCompile Include="Source\Particles\Emitter.cpp" />
     <ClCompile Include="Source\Map\Map.cpp" />
     <ClCompile Include="Source\Particles\Particle.cpp" />
@@ -156,6 +157,7 @@
     <ClCompile Include="Source\Layers\TileLayer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Camera\Camera.h" />
     <ClInclude Include="Source\Particles\Emitter.h" />
     <ClInclude Include="Source\Map\Map.h" />
     <ClInclude Include="Source\Layers\Layer.h" />
