--- a/CoolShooterGuy.vcxproj.filters
+++ b/CoolShooterGuy.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClCompile Include="Source\Layers\TileLayer.cpp" />
     <ClCompile Include="Source\Particles\Emitter.cpp" />
     <ClCompile Include="Source\Camera\Camera.cpp" />
+    <ClCompile Include="Source\Enemies\BaseEnemy.cpp" />
+    <ClCompile Include="Source\Animation\Animator.cpp" />
+    <ClCompile Include="Source\Animation\AnimatorController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Input\InputHandler.h" />
@@ -49,5 +52,8 @@
     <ClInclude Include="Source\Layers\TileLayer.h" />
     <ClInclude Include="Source\Particles\Emitter.h" />
     <ClInclude Include="Source\Camera\Camera.h" />
+    <ClInclude Include="Source\Enemies\BaseEnemy.h" />
+    <ClInclude Include="Source\Animation\Animator.h" />
+    <ClInclude Include="Source\Animation\AnimatorController.h" />
   </ItemGroup>
 </Project>
