--- a/CoolShooterGuy.vcxproj
+++ b/CoolShooterGuy.vcxproj
@@ -133,6 +133,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Externals\TinyXML\tinystr.cpp" />
+    <ClCompile Include="Source\Externals\TinyXML\tinyxml.cpp" />
+    <ClCompile Include="Source\Externals\TinyXML\tinyxmlerror.cpp" />
+    <ClCompile Include="Source\Externals\TinyXML\tinyxmlparser.cpp" />
+    <ClCompile Include="Source\FileHandling\FileHandler.cpp" />
     <ClCompile Include="Source\Animation\AnimatorController.cpp" />
     <ClCompile Include="Source\Animation\Animator.cpp" />
     <ClCompile Include="Source\Enemies\BaseEnemy.cpp" />
@@ -160,6 +165,9 @@
     <ClCompile Include="Source\Layers\TileLayer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Externals\TinyXML\tinystr.h" />
+    <ClInclude Include="Source\Externals\TinyXML\tinyxml.h" />
+    <ClInclude Include="Source\FileHandling\FileHandler.h" />
     <ClInclude Include="Source\Animation\AnimatorController.h" />
     <ClInclude Include="Source\Animation\Animator.h" />
     <ClInclude Include="Source\Enemies\BaseEnemy.h" />
