--- a/CoolShooterGuy.vcxproj.filters
+++ b/CoolShooterGuy.vcxproj.filters
@@ -32,6 +32,8 @@
     <ClCompile Include="Source\Externals\TinyXML\tinyxmlerror.cpp" />
     <ClCompile Include="Source\Externals\TinyXML\tinyxmlparser.cpp" />
     <ClCompile Include="Source\UI\UIManager.cpp" />
+    <ClCompile Include="Source\Players\Player1.cpp" />
+    <ClCompile Include="Source\Players\Players.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Input\InputHandler.h" />
@@ -65,5 +67,7 @@
     <ClInclude Include="Source\Externals\TinyXML\tinystr.h" />
     <ClInclude Include="Source\Externals\TinyXML\tinyxml.h" />
     <ClInclude Include="Source\UI\UIManager.h" />
+    <ClInclude Include="Source\Players\Player1.h" />
+    <ClInclude Include="Source\Players\Players.h" />
   </ItemGroup>
 </Project>
