--- a/CoolShooterGuy.vcxproj
+++ b/CoolShooterGuy.vcxproj
@@ -160,6 +160,8 @@
     <ClCompile Include="Source\Game\Game.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Components\Transform.cpp" />
+    <ClCompile Include="Source\Players\Player1.cpp" />
+    <ClCompile Include="Source\Players\Players.cpp" />
     <ClCompile Include="Source\UI\UIManager.cpp" />
     <ClCompile Include="Source\Vector2\Vector2.cpp" />
     <ClCompile Include="Source\Time\Time.cpp" />
@@ -193,6 +195,8 @@
     <ClInclude Include="Source\Components\Transform.h" />
     <ClInclude Include="Source\Input\Mouse.h" />
     <ClInclude Include="Source\Debugging\MemoryLeakDetector.h" />
+    <ClInclude Include="Source\Players\Player1.h" />
+    <ClInclude Include="Source\Players\Players.h" />
     <ClInclude Include="Source\UI\UIManager.h" />
     <ClInclude Include="Source\Vector2\Vector2.h" />
     <ClInclude Include="Source\Time\Time.h" />
