--- a/CoolShooterGuy.vcxproj.filters
+++ b/CoolShooterGuy.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClCompile Include="Source\UI\UIManager.cpp" />
     <ClCompile Include="Source\Players\Player1.cpp" />
     <ClCompile Include="Source\Players\Players.cpp" />
+    <ClCompile Include="Source\WallEnemy\WallEnemy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Input\InputHandler.h" />
@@ -69,5 +70,6 @@
     <ClInclude Include="Source\UI\UIManager.h" />
     <ClInclude Include="Source\Players\Player1.h" />
     <ClInclude Include="Source\Players\Players.h" />
+    <ClInclude Include="Source\WallEnemy\WallEnemy.h" />
   </ItemGroup>
 </Project>
