--- a/CoolShooterGuy.vcxproj
+++ b/CoolShooterGuy.vcxproj
@@ -160,8 +160,7 @@
     <ClCompile Include="Source\Game\Game.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Components\Transform.cpp" />
-    <ClCompile Include="Source\Players\Player.cpp" />
-    <ClCompile Include="Source\Players\Players.cpp" />
+    <ClCompile Include="Source\Player\Player.cpp" />
     <ClCompile Include="Source\UI\UIManager.cpp" />
     <ClCompile Include="Source\Vector2\Vector2.cpp" />
     <ClCompile Include="Source\Time\Time.cpp" />
@@ -169,6 +168,7 @@
     <ClCompile Include="Source\WallEnemy\WallEnemy.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Collision\MapCollisionResult.h" />
     <ClInclude Include="Source\Externals\TinyXML\tinystr.h" />
     <ClInclude Include="Source\Externals\TinyXML\tinyxml.h" />
     <ClInclude Include="Source\FileHandling\FileHandler.h" />
@@ -196,8 +196,7 @@
     <ClInclude Include="Source\Components\Transform.h" />
     <ClInclude Include="Source\Input\Mouse.h" />
     <ClInclude Include="Source\Debugging\MemoryLeakDetector.h" />
-    <ClInclude Include="Source\Players\Player.h" />
-    <ClInclude Include="Source\Players\Players.h" />
+    <ClInclude Include="Source\Player\Player.h" />
     <ClInclude Include="Source\UI\UIManager.h" />
     <ClInclude Include="Source\Vector2\Vector2.h" />
     <ClInclude Include="Source\Time\Time.h" />
