--- a/CoolShooterGuy.vcxproj.filters
+++ b/CoolShooterGuy.vcxproj.filters
@@ -34,6 +34,10 @@
     <ClCompile Include="Source\UI\UIManager.cpp" />
     <ClCompile Include="Source\Player\Player.cpp" />
     <ClCompile Include="Source\WallEnemy\WallEnemy.cpp" />
+    <ClCompile Include="Source\Enemies\JumpingEnemy.cpp" />
+    <ClCompile Include="Source\MapGeneration\MapGenerator.cpp" />
+    <ClCompile Include="Source\Enemies\WalkingEnemy.cpp" />
+    <ClCompile Include="Source\EnvironmentHazard\EnvironmentHazards.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Input\InputHandler.h" />
@@ -70,5 +74,9 @@
     <ClInclude Include="Source\Player\Player.h" />
     <ClInclude Include="Source\WallEnemy\WallEnemy.h" />
     <ClInclude Include="Source\Collision\MapCollisionResult.h" />
+    <ClInclude Include="Source\Enemies\JumpingEnemy.h" />
+    <ClInclude Include="Source\MapGeneration\MapGenerator.h" />
+    <ClInclude Include="Source\Enemies\WalkingEnemy.h" />
+    <ClInclude Include="Source\EnvironmentHazard\EnvironmentHazards.h" />
   </ItemGroup>
 </Project>
