--- a/CoolShooterGuy.vcxproj
+++ b/CoolShooterGuy.vcxproj
@@ -133,6 +133,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Missile\Missile.cpp" />
     <ClCompile Include="Source\Layers\EnemyLayer.cpp" />
     <ClCompile Include="Source\EnvironmentHazard\EnvironmentHazards.cpp" />
     <ClCompile Include="Source\Enemies\JumpingEnemy.cpp" />
@@ -173,6 +174,7 @@
     <ClCompile Include="Source\Enemies\WalkingEnemy.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Missile\Missile.h" />
     <ClInclude Include="Source\Layers\EnemyLayer.h" />
     <ClInclude Include="Source\EnvironmentHazard\EnvironmentHazards.h" />
     <ClInclude Include="Source\Enemies\JumpingEnemy.h" />
